# sw-cor24-emulator

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  README.md  serve.sh
.agentrail/: instruction-lock.toml  plan.md  saga.toml
cli/: Cargo.toml
docs/: cli-emulator-guide.md  cli-tools.md  cor24-tutorial.md  differentiate.md  eli5.md  extended-assembler.md  feature-i2c-spi-emu.md  feature-terminal-echo.md  feature-terminal-mode.md  feature-wasm-yield.md  feature-watchdog.md  feedback-checklist.md  migration-plan.md  saga-remove-internal-assembler-baseline.md
examples/: web_surface_smoke.rs
isa/: Cargo.toml
pages/: asm-game-98bf132cb1d13bdc.css  asm-game-a316b3a061d24474.css  asm-game-f5537a336caf86f4.css  cor24-emulator-12e591ead8d082ca.js  cor24-emulator-12e591ead8d082ca_bg.wasm  cor24-emulator-14d9681daff58ee_bg.wasm  cor24-emulator-20526dfaa9081459.js  cor24-emulator-20526dfaa9081459_bg.wasm  cor24-emulator-216e41ad669e3380.js  cor24-emulator-216e41ad669e3380_bg.wasm  cor24-emulator-653677f11249a3d.js  cor24-emulator-653677f11249a3d_bg.wasm  cor24-emulator-6c67f0daf8d522a1.js  cor24-emulator-6c67f0daf8d522a1_bg.wasm  cor24-emulator-6f523b043e8708dc.js  cor24-emulator-6f523b043e8708dc_bg.wasm  cor24-emulator-70a7a3b8509120e9_bg.wasm  cor24-emulator-7b43c38da684aa3_bg.wasm  cor24-emulator-872501dcf82bd31d_bg.wasm  cor24-emulator-87d2b1917dc193a3_bg.wasm  cor24-emulator-8a1126fcca605e4a_bg.wasm  cor24-emulator-9a140f36a4ae4e_bg.wasm  cor24-emulator-a89c6d2430a53332_bg.wasm  cor24-emulator-b21c8395c1b961c9.js  cor24-emulator-b21c8395c1b961c9_bg.wasm  index.html  (+6 more)
(+187 files in other folders)
