[workspace]
members = [".", "cli", "isa"]
resolver = "2"

[package]
name = "cor24-emulator"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "COR24 C-Oriented RISC 24-bit Assembly Emulator"

[lib]
crate-type = ["rlib"]

[dependencies]
cor24-isa = { path = "./isa", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = "z"
lto = true
